--- a/_posts/2023-10-6-post2.md
+++ b/_posts/2023-10-6-post2.md
@@ -32,7 +32,7 @@ while True:
         print()
         fake = input("Type the number of the item you want to delete: ") #variable made for adding todos
         print()
-        del tdolist[int(fake) - 1] #removes the specific item in place of the INDEX of the number that the user input. Subtract 1 from the number that the user inputs and you get the index of the item they wish to remove.
+        del tdolist[int(fake) - 1] #removes the specific item in place of the INDEX of the number that the user input, Subtract 1 from the number that the user inputs and you get the index of the item they wish to remove.
         print()
         for tdos in tdolist:
             print ("Your updated list is: " + str(tdos)) #for loop to iterate through printing each item in the list to make the UX better for deletion
