--- a/_posts/2023-10-6-post2do.md
+++ b/_posts/2023-10-6-post2do.md
@@ -1,3 +1,5 @@
+# To Do Documentation!
+
 I'm back! This is my 2nd blog post. For the past few weeks, I've been doing a bunch of coding in Python at school. Its been really fun especially since because its all been like a refresher reminding me of how to do certain things I forgot about as well as learning new things.
 
 Yesterday we started working on making a todo list using Python. Since Python is a coding languange that isn't the most visually appeally and doesn't have features like buttons and stuff like that (as far as I know), we were tasked with just the simple commands of adding, deleting, and displaying the todo list.
